--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
                             <li>Implemented a RESTful API system for easy integration with third-party applications.</li>
                         </ul>
                         <div class="project-links">
-                            <a href="#" target="_blank" class="project-link">
+                            <a href="https://github.com/shubham-shrivastava/smsify" target="_blank" class="project-link">
                                 <i class="fas fa-external-link-alt"></i> View Project
                             </a>
                         </div>
@@ -311,7 +311,7 @@
                             <li>Implemented advanced filtering and sorting capabilities to enhance user experience.</li>
                         </ul>
                         <div class="project-links">
-                            <a href="#" target="_blank" class="project-link">
+                            <a href="https://github.com/shubham-shrivastava/tastysearch" target="_blank" class="project-link">
                                 <i class="fas fa-external-link-alt"></i> View Project
                             </a>
                         </div>
@@ -335,7 +335,7 @@
                             <li>Integrated with Google Spreadsheets API to automate data storage and organization.</li>
                         </ul>
                         <div class="project-links">
-                            <a href="#" target="_blank" class="project-link">
+                            <a href="https://github.com/shubham-shrivastava/linkedin_bot" target="_blank" class="project-link">
                                 <i class="fas fa-external-link-alt"></i> View Project
                             </a>
                         </div>
@@ -383,7 +383,7 @@
                             <li>Built a web application using Python Flask for data visualization with charts and graphs.</li>
                         </ul>
                         <div class="project-links">
-                            <a href="#" target="_blank" class="project-link">
+                            <a href="https://github.com/shubham-shrivastava/technothonIoT/tree/master/Technothon" target="_blank" class="project-link">
                                 <i class="fas fa-external-link-alt"></i> View Project
                             </a>
                         </div>
