--- a/index.html
+++ b/index.html
@@ -183,10 +183,11 @@
                                     <strong>Technical Environment:</strong> Angular 18, TypeScript, NgRx, Node.js, Express, REST APIs, NX Monorepo, Jest, Git, CI/CD, AWS
                                 </div>
                                 <ul class="timeline-description">
-                                    <li>Engineered the flagship Flex and Custom Charts features, driving customer acquisition and improving retention rates.</li>
-                                    <li>Led the architectural transition to a micro-frontend infrastructure, resulting in 60% faster build times and significant improvement in development velocity.</li>
-                                    <li>Successfully executed the migration from AngularJS to Angular 8, delivering performance improvement and enabling modern development practices that reduced technical debt.</li>
-                                    <li>Established comprehensive automated testing framework paradigm, increasing code coverage from 65% to 92% and reducing critical production bugs significantly.</li>
+                                    <li>Engineered the flagship <strong>Flex and Custom Charts</strong> features, driving customer acquisition and improving retention rates.</li>
+                                    <li><strong>Made key technical decisions</strong> and <strong>managed project execution</strong> for the architectural transition to a <strong>micro-frontend</strong> infrastructure, resulting in 60% faster build times and significant improvement in development velocity.</li>
+                                    <li><strong>Coached developers</strong> and <strong>established team processes</strong> to overcome obstacles during the migration from <strong>AngularJS to Angular 8</strong>, delivering performance improvement and enabling modern development practices that reduced technical debt.</li>
+                                    <li><strong>Implemented documented processes</strong> and <strong>developed async communication patterns</strong> for the distributed engineering team, improving collaboration and reducing meeting overhead.</li>
+                                    <li>Established comprehensive <strong>automated testing framework paradigm</strong>, increasing code coverage from 65% to 92% and reducing critical production bugs significantly.</li>
                                 </ul>
                             </div>
                         </div>
@@ -204,8 +205,9 @@
                                     <strong>Technical Environment:</strong> Node.js, Express, MongoDB, REST APIs, Microservices, Docker, GitHub Actions, AWS Lambda
                                 </div>
                                 <ul class="timeline-description">
-                                    <li>Architected and built scalable RESTful APIs using Node.js and Express, enabling rapid feature deployment.</li>
-                                    <li>Constructed and integrated data integration connectors for 5+ external platforms increasing platform versatility and expanding market reach.</li>
+                                    <li><strong>Collaborated with product team</strong> to define technical requirements and <strong>prioritize feature development</strong> for backend systems.</li>
+                                    <li>Architected and built <strong>scalable RESTful APIs</strong> using <strong>Node.js</strong> and <strong>Express</strong>, enabling rapid feature deployment and removing technical obstacles for the frontend team.</li>
+                                    <li>Constructed and integrated <strong>data integration connectors</strong> for 5+ external platforms increasing platform versatility and expanding market reach.</li>
                                 </ul>
                             </div>
                         </div>
@@ -223,9 +225,9 @@
                                     <strong>Technical Environment:</strong> Python, Django, OCR, Tesseract, Java, Windows/.NET
                                 </div>
                                 <ul class="timeline-description">
-                                    <li>Delivered mission-critical and highly secure applications for government, achieving security standards and regulatory requirements.</li>
-                                    <li>Engineered an automated translation processing system using OCR and Google Tesseract, reducing processing time and eliminating data errors for 1000s of documents monthly.</li>
-                                    <li>Created a cross-platform deployment solution for automating software installation across enterprise environments, reducing setup time from days to minutes and saving 120+ IT staff hours per deployment cycle.</li>
+                                    <li><strong>Collaborated in small engineering teams</strong> to deliver <strong>mission-critical</strong> and <strong>highly secure</strong> applications for <strong>government</strong>, achieving security standards and regulatory requirements.</li>
+                                    <li><strong>Led technical design discussions</strong> and <strong>coordinated development efforts</strong> for an <strong>automated translation processing system</strong> using <strong>OCR and Google Tesseract</strong>, reducing processing time and eliminating data errors for 1000s of documents monthly.</li>
+                                    <li>Created a <strong>cross-platform deployment solution</strong> for <strong>automating software installation</strong> across enterprise environments, reducing setup time from days to minutes and saving 120+ IT staff hours per deployment cycle.</li>
                                 </ul>
                             </div>
                         </div>
