Update with new projects

--- a/index.html
+++ b/index.html
@@ -246,6 +246,40 @@
             </div>
             <div class="projects-grid">
                 <div class="project-card">
+                    <div class="project-image" data-gallery="nexdocs">
+                        <img src="assets/nexdocs1.png" alt="Nexdocs - AI-Powered Knowledge Platform">
+                        <div class="image-overlay">
+                            <i class="fas fa-expand"></i>
+                            <span>View Gallery (8 images)</span>
+                        </div>
+                    </div>
+                    <div class="project-content">
+                        <h3>Nexdocs - AI-Powered Knowledge Platform</h3>
+                        <div class="tech-environment">
+                            <strong>Technologies:</strong> Next.js 14, TypeScript, tRPC, Tailwind CSS, PostgreSQL, Prisma, Node.js, NestJS, Python, FastAPI, OpenAI GPT-4, Pinecone, AWS
+                        </div>
+                        <div class="project-description-text">
+                            <p>A comprehensive AI-powered knowledge platform that transforms how organizations create, manage, and distribute documentation.</p>
+                            <div class="project-description-expandable" style="display: none;">
+                                <p>Moving beyond simple FAQ generation to become a complete knowledge management ecosystem with advanced AI capabilities and multi-modal embedding options.</p>
+                            </div>
+                        </div>
+                        <ul class="project-description feature-list">
+                            <li>Architected and developed a full-stack knowledge management platform using Next.js 14 with App Router, tRPC for type-safe APIs, and modern PostgreSQL database design with Prisma ORM.</li>
+                            <li>Implemented AI-powered content generation and semantic search using OpenAI GPT-4 and Pinecone vector database, reducing documentation creation time by 60% and improving search accuracy.</li>
+                            <div class="project-description-expandable" style="display: none;">
+                                <li>Built comprehensive dashboard with rich text editor, hierarchical content organization, real-time collaboration features, and analytics tracking for knowledge base performance.</li>
+                                <li>Designed scalable microservices architecture with Node.js/NestJS backend and Python FastAPI service for AI operations, supporting enterprise-level documentation workflows.</li>
+                            </div>
+                        </ul>
+                        <button class="show-more-btn" onclick="toggleProjectDescription(this)">
+                            <span class="show-more-text">Show More</span>
+                            <i class="fas fa-chevron-down"></i>
+                        </button>
+                    </div>
+                </div>
+
+                <div class="project-card">
                     <div class="project-image" data-gallery="autoresearch">
                         <img src="assets/autoresearch1.png" alt="AutoResearch App">
                         <div class="image-overlay">
