--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Shubham Shrivastav - Full Stack Developer Portfolio with 8+ years of experience in Angular, React, Node.js, TypeScript, and cloud technologies">
-    <meta name="keywords" content="Full Stack Developer, Senior Software Engineer, Angular, React, NodeJS, TypeScript, Frontend Development, Backend Development, JavaScript, API Development, Microservices, Cloud Architecture">
+    <meta name="description" content="Shubham Shrivastav - Senior Full Stack Developer with 8+ years of experience in backend systems, AI integration, Node.js, Python, TypeScript, and scalable architecture">
+    <meta name="keywords" content="Full Stack Developer, Senior Backend Engineer, Node.js, Python, AI Integration, TypeScript, Backend Development, Microservices, REST APIs, OpenAI, LangChain, Angular, React, Data Processing Pipelines">
     <title>Shubham Shrivastav | Full Stack Developer</title>
     <link rel="stylesheet" href="portfolio.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -69,10 +69,10 @@
             <div class="about-content">
                 <div class="about-info">
                     <p>
-                        Full Stack Developer with 8+ years of experience specializing in web application architecture, frontend development, and backend systems. Proven expertise in crafting and building high-performance, scalable, and secure applications using modern technologies including Angular, React, Node.js, and microservices architecture.
+                        Senior Full Stack Developer with 8+ years of experience building scalable backend systems, AI-powered applications, and modern web architectures. Deep expertise in Node.js, Python, and TypeScript for backend services, with proven ability to architect microservices, REST APIs, and sophisticated data processing pipelines supporting millions of users.
                     </p>
                     <p>
-                        I focus on code optimization, maintainable architecture, and delivering measurable improvements to user experience and business metrics.
+                        I specialize in AI integration (OpenAI GPT-4, LangChain), performance optimization, and writing pragmatic, testable code. My work spans from backend architecture and data pipelines to full-stack features, consistently delivering measurable improvements in performance, scalability, and user experience.
                     </p>
                     <div class="about-details">
                         <div class="detail">
@@ -98,13 +98,14 @@
                 <div class="core-competencies">
                     <h3>Core Competencies</h3>
                     <ul>
-                        <li>Front-end Architecture & Design</li>
-                        <li>Micro-frontend Implementation</li>
-                        <li>API Development & Integration</li>
-                        <li>Performance Optimization</li>
-                        <li>Cross-platform Development</li>
-                        <li>Technical Leadership</li>
-                        <li>Agile/Scrum Methodologies</li>
+                        <li>Backend Systems Architecture</li>
+                        <li>AI Integration & Optimization</li>
+                        <li>Data Processing Pipelines</li>
+                        <li>Microservices & REST APIs</li>
+                        <li>Performance & Scalability</li>
+                        <li>Full-Stack Development</li>
+                        <li>Technical Leadership & Mentorship</li>
+                        <li>Remote-First Collaboration</li>
                     </ul>
                 </div>
             </div>
@@ -127,27 +128,42 @@
                     </div>
                     <div class="skills-content">
                         <div class="skill-category">
-                            <h3>Frontend</h3>
+                            <h3>Backend & Infrastructure</h3>
                             <div class="skill-tags">
-                                <span class="skill-tag">Angular 2+/18</span>
+                                <span class="skill-tag">Node.js 16+</span>
+                                <span class="skill-tag">Python</span>
                                 <span class="skill-tag">TypeScript</span>
-                                <span class="skill-tag">RxJS</span>
-                                <span class="skill-tag">Flutter</span>
-                                <span class="skill-tag">NgRx/Redux</span>
-                                <span class="skill-tag">ReactJS</span>
-                                <span class="skill-tag">NextJS</span>
-                                <span class="skill-tag">HTML5/CSS3</span>
+                                <span class="skill-tag">REST APIs</span>
+                                <span class="skill-tag">Express.js</span>
+                                <span class="skill-tag">FastAPI</span>
+                                <span class="skill-tag">Microservices</span>
+                                <span class="skill-tag">PostgreSQL</span>
+                                <span class="skill-tag">MongoDB</span>
+                                <span class="skill-tag">Redis</span>
+                                <span class="skill-tag">GraphQL</span>
+                                <span class="skill-tag">Docker</span>
                             </div>
                         </div>
                         <div class="skill-category">
-                            <h3>Backend</h3>
+                            <h3>AI & Machine Learning</h3>
                             <div class="skill-tags">
-                                <span class="skill-tag">Node.js 16+</span>
-                                <span class="skill-tag">REST APIs</span>
-                                <span class="skill-tag">Express.js</span>
-                                <span class="skill-tag">MongoDB</span>
-                                <span class="skill-tag">Microservices</span>
-                                <span class="skill-tag">Python</span>
+                                <span class="skill-tag">OpenAI GPT-4</span>
+                                <span class="skill-tag">LangChain</span>
+                                <span class="skill-tag">Vector Databases</span>
+                                <span class="skill-tag">Embeddings</span>
+                                <span class="skill-tag">Privacy-First AI</span>
+                                <span class="skill-tag">AI Observability</span>
+                            </div>
+                        </div>
+                        <div class="skill-category">
+                            <h3>Frontend</h3>
+                            <div class="skill-tags">
+                                <span class="skill-tag">Angular 2+/18</span>
+                                <span class="skill-tag">React 18</span>
+                                <span class="skill-tag">NextJS</span>
+                                <span class="skill-tag">RxJS</span>
+                                <span class="skill-tag">NgRx/Redux</span>
+                                <span class="skill-tag">Flutter</span>
                             </div>
                         </div>
                         <div class="skill-category">
@@ -180,14 +196,14 @@
                                 <h4>Luzmo (Formerly CumuLio)</h4>
                                 <p class="timeline-location"><i class="fas fa-map-marker-alt"></i> Remote</p>
                                 <div class="tech-environment">
-                                    <strong>Technical Environment:</strong> Angular 18, TypeScript, NgRx, Node.js, Express, REST APIs, NX Monorepo, Jest, Git, CI/CD, AWS
+                                    <strong>Technical Environment:</strong> Node.js, Express, Python, FastAPI, TypeScript, REST APIs, PostgreSQL, MongoDB, Redis, Microservices, OpenAI GPT-4, LangChain, Angular 18, NgRx, NX Monorepo, Docker, AWS, CI/CD
                                 </div>
                                 <ul class="timeline-description">
-                                    <li>Engineered the flagship <strong>Flex and Custom Charts</strong> features, driving customer acquisition and improving retention rates.</li>
-                                    <li><strong>Made key technical decisions</strong> and <strong>managed project execution</strong> for the architectural transition to a <strong>micro-frontend</strong> infrastructure, resulting in 60% faster build times and significant improvement in development velocity.</li>
-                                    <li><strong>Coached developers</strong> and <strong>established team processes</strong> to overcome obstacles during the migration from <strong>AngularJS to Angular 8</strong>, delivering performance improvement and enabling modern development practices that reduced technical debt.</li>
-                                    <li><strong>Implemented documented processes</strong> and <strong>developed async communication patterns</strong> for the distributed engineering team, improving collaboration and reducing meeting overhead.</li>
-                                    <li>Established comprehensive <strong>automated testing framework paradigm</strong>, increasing code coverage from 65% to 92% and reducing critical production bugs significantly.</li>
+                                    <li><strong>Led end-to-end ownership</strong> of complex backend projects including <strong>AI-powered analytics features</strong> and data processing systems, driving customer acquisition and retention while <strong>mentoring 5+ engineers</strong> on best practices, code reviews, and career development.</li>
+                                    <li>Architected and optimized <strong>Luzmo IQ</strong>, the flagship AI-powered analytics assistant enabling instant answers to data questions backed by interactive charts. Achieved <strong>40% performance improvement</strong> through <strong>smart tokenization (tiktoken)</strong>, intelligent query optimization, Redis caching, <strong>AI observability with LangChain</strong>, and privacy-preserving LLM integration patterns.</li>
+                                    <li>Designed and delivered the <strong>Summary Chart Widget</strong> with complete backend workflow, REST API endpoints, and <strong>sophisticated data aggregation pipelines</strong>, leveraging <strong>GPT-4</strong> to automatically generate contextual insights from dashboard visualizations while maintaining data privacy.</li>
+                                    <li><strong>Led system design and architecture</strong> for micro-frontend transition, achieving <strong>60% faster build times</strong>, improved developer velocity, and <strong>fault-tolerant architecture</strong> supporting millions of embedded analytics requests daily.</li>
+                                    <li>Championed <strong>pragmatic, testable code</strong> and automation, implementing comprehensive testing frameworks (Jest, Cypress, Playwright) that increased code coverage from 65% to 92%, minimizing production issues with robust CI/CD pipelines.</li>
                                 </ul>
                             </div>
                         </div>
@@ -205,9 +221,8 @@
                                     <strong>Technical Environment:</strong> Node.js, Express, MongoDB, REST APIs, Microservices, Docker, GitHub Actions, AWS Lambda
                                 </div>
                                 <ul class="timeline-description">
-                                    <li><strong>Collaborated with product team</strong> to define technical requirements and <strong>prioritize feature development</strong> for backend systems.</li>
-                                    <li>Architected and built <strong>scalable RESTful APIs</strong> using <strong>Node.js</strong> and <strong>Express</strong>, enabling rapid feature deployment and removing technical obstacles for the frontend team.</li>
-                                    <li>Constructed and integrated <strong>data integration connectors</strong> for 5+ external platforms increasing platform versatility and expanding market reach.</li>
+                                    <li>Architected and implemented <strong>scalable RESTful APIs and microservices</strong> using <strong>Node.js</strong> and <strong>Express</strong>, processing millions of API requests daily with 99.9% uptime, enabling rapid feature deployment and supporting application growth.</li>
+                                    <li>Engineered <strong>sophisticated data processing pipelines</strong> and <strong>data integration connectors</strong> for 5+ external platforms (BigQuery, Snowflake, PostgreSQL), enhancing platform versatility and enabling real-time analytics for thousands of customers.</li>
                                 </ul>
                             </div>
                         </div>
@@ -250,28 +265,35 @@
                         <img src="assets/nexdocs1.png" alt="Nexdocs - AI-Powered Knowledge Platform">
                         <div class="image-overlay">
                             <i class="fas fa-expand"></i>
-                            <span>View Gallery (8 images)</span>
+                            <span>View Gallery (9 images)</span>
                         </div>
                     </div>
                     <div class="project-content">
                         <h3>Nexdocs - AI-Powered Knowledge Platform</h3>
                         <div class="tech-environment">
-                            <strong>Technologies:</strong> Next.js 14, TypeScript, tRPC, Tailwind CSS, PostgreSQL, Prisma, Node.js, NestJS, Python, FastAPI, OpenAI GPT-4, Pinecone, AWS
+                            <strong>Technologies:</strong> Next.js 14, TypeScript, tRPC, Tailwind CSS, PostgreSQL (pgvector), Prisma, Node.js, NestJS, Python, FastAPI, OpenAI GPT-4, LangChain, Pinecone, Docker, Railway
                         </div>
                         <div class="project-description-text">
-                            <p>A comprehensive AI-powered knowledge platform that transforms how organizations create, manage, and distribute documentation.</p>
+                            <p>A comprehensive AI-powered knowledge platform that transforms how organizations create, manage, and distribute intelligent documentation. Upload documents or URLs and let AI instantly generate comprehensive, well-structured knowledge bases.</p>
                             <div class="project-description-expandable" style="display: none;">
-                                <p>Moving beyond simple FAQ generation to become a complete knowledge management ecosystem with advanced AI capabilities and multi-modal embedding options.</p>
+                                <p>Built on a microservices architecture with real-time processing, parallel AI generation, and enterprise-grade scalability supporting multiple deployment modes (hosted sites, embeddable widgets, APIs).</p>
                             </div>
                         </div>
                         <ul class="project-description feature-list">
-                            <li>Architected and developed a full-stack knowledge management platform using Next.js 14 with App Router, tRPC for type-safe APIs, and modern PostgreSQL database design with Prisma ORM.</li>
-                            <li>Implemented AI-powered content generation and semantic search using OpenAI GPT-4 and Pinecone vector database, reducing documentation creation time by 60% and improving search accuracy.</li>
+                            <li>Architected full-stack microservices platform with Next.js 14 (App Router), NestJS for data management, and FastAPI for AI operations. Implemented tRPC for end-to-end type safety across 40+ API endpoints with zero runtime type errors.</li>
+                            <li>Engineered intelligent document processing pipeline supporting PDF, DOCX, Markdown, and URLs with AI-powered content analysis, topic extraction, and automatic knowledge base structure generation using GPT-4o and LangChain with smart chunking strategies.</li>
                             <div class="project-description-expandable" style="display: none;">
-                                <li>Built comprehensive dashboard with rich text editor, hierarchical content organization, real-time collaboration features, and analytics tracking for knowledge base performance.</li>
-                                <li>Designed scalable microservices architecture with Node.js/NestJS backend and Python FastAPI service for AI operations, supporting enterprise-level documentation workflows.</li>
+                                <li>Developed real-time streaming architecture with Server-Sent Events (SSE) and Redis Pub/Sub for live progress updates, solving token expiration issues with session streaming (1-hour TTL) and automatic heartbeat mechanisms.</li>
+                                <li>Built parallel article generation system (5 concurrent workers) with smart content retrieval using semantic search (pgvector embeddings) and OpenAI text-embedding-3-small, reducing generation time by 70% while maintaining quality and context relevance.</li>
+                                <li>Implemented comprehensive dashboard with rich text editor (Lexical/TipTap), hierarchical section/article organization, theme customization with design tokens, SEO optimization, and public/private publishing controls with custom domain support.</li>
+                                <li>Designed fault-tolerant system with circuit breakers for OpenAI API, Redis caching for AI responses, automatic retry logic with exponential backoff, AI observability with LangSmith tracing, and comprehensive error handling across all services.</li>
                             </div>
                         </ul>
+                        <div class="project-links">
+                            <a href="https://nexdocs.in" target="_blank" class="project-link">
+                                <i class="fas fa-external-link-alt"></i> View Live Demo
+                            </a>
+                        </div>
                         <button class="show-more-btn" onclick="toggleProjectDescription(this)">
                             <span class="show-more-text">Show More</span>
                             <i class="fas fa-chevron-down"></i>
@@ -300,8 +322,8 @@
                             <li>Formulated and constructed PDF report generation functionality that saves users an average of 5 hours per research project, driving a 25% increase in daily user engagement metrics.</li>
                         </ul>
                         <div class="project-links">
-                            <a href="https://play.google.com/store/apps/details?id=com.connectstrings.ask_to_search&hl=en" target="_blank" class="project-link">
-                                <i class="fas fa-external-link-alt"></i> View Project
+                            <a href="https://github.com/shubham-shrivastava/autoresearch" target="_blank" class="project-link">
+                                <i class="fab fa-github"></i> View on GitHub
                             </a>
                             <a href="https://www.producthunt.com/products/autoresearch-research-expert" target="_blank" class="project-link">
                                 <i class="fab fa-product-hunt"></i> Product Hunt
