--- a/index.html
+++ b/index.html
@@ -302,6 +302,38 @@
                 </div>
 
                 <div class="project-card">
+                    <div class="project-image" data-gallery="railway">
+                        <img src="assets/railway1.png" alt="Railway Control Center">
+                        <div class="image-overlay">
+                            <i class="fas fa-expand"></i>
+                            <span>View Gallery (4 images)</span>
+                        </div>
+                    </div>
+                    <div class="project-content">
+                        <h3>Railway Control Center - Service Scheduler</h3>
+                        <div class="tech-environment">
+                            <strong>Technologies:</strong> React, Next.js 14, TypeScript, Node.js, NestJS, GraphQL, PostgreSQL, Prisma, Docker, Railway, Cron Scheduling
+                        </div>
+                        <div class="project-description-text">
+                            <p>A full-stack application to manage Railway containers via their GraphQL API, with features for scheduled deployments and unified health monitoring that don't exist in Railway's UI yet.</p>
+                        </div>
+                        <ul class="project-description feature-list">
+                            <li>Built end-to-end using Railway's GraphQL API to add functionality not yet available in the Railway UI. Features include scheduled spin-up/spin-down of services (e.g., auto-shutdown at 6 PM, wake up at 9 AM), quick actions ("stop in 5 minutes"), and a unified health dashboard.</li>
+                            <li>Architected TypeScript + GraphQL API layer in NestJS with strong typing and validation. Built cron-based scheduler for async job execution with secure token storage.</li>
+                            <li>Designed intuitive React UI with real-time status updates (polling), service cards with one-click actions, and schedule management. Deployed on Railway using Docker.</li>
+                        </ul>
+                        <div class="project-links">
+                            <a href="https://railway-control-center-frontend.up.railway.app/" target="_blank" class="project-link">
+                                <i class="fas fa-external-link-alt"></i> View Live Demo
+                            </a>
+                            <a href="https://github.com/shubham-shrivastava/railway-control-center" target="_blank" class="project-link">
+                                <i class="fab fa-github"></i> View on GitHub
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="project-card">
                     <div class="project-image" data-gallery="autoresearch">
                         <img src="assets/autoresearch1.png" alt="AutoResearch App">
                         <div class="image-overlay">
